--- a/angus-spring-boot/build.gradle
+++ b/angus-spring-boot/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     targetCompatibility = '1.8'
     repositories {
         mavenCentral()
+        maven { url "https://repo.spring.io/libs-release" }
     }
 }
 
@@ -34,7 +35,8 @@ springBoot {
 }
 
 dependencies {
-
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    runtime("org.hsqldb:hsqldb")
         //"org.springframework.boot:spring-boot-starter-thymeleaf",
     compile "org.springframework.boot:spring-boot-starter-web",
             "org.springframework.boot:spring-boot-starter-actuator",
@@ -44,6 +46,7 @@ dependencies {
             "org.mybatis:mybatis-spring:1.2.2",
            // "org.springframework:spring-jdbc:4.1.6.RELEASE",
             //"org.apache.tomcat:tomcat-jdbc:7.0.50",
+            "cn.guoyukun.jdbc:oracle-ojdbc6:11.2.0.3.0",
             "mysql:mysql-connector-java:5.1.35",
             'commons-fileupload:commons-fileupload:1.3.1',
             'com.googlecode.flyway:flyway-core:2.3.1',
@@ -54,7 +57,7 @@ dependencies {
             'org.codehaus.jackson:jackson-core-asl:1.9.13',
             "com.jayway.jsonpath:json-path:0.9.1",
             "org.apache.httpcomponents:httpclient:4.3.5"
-
+    compile group: 'commons-dbcp', name: 'commons-dbcp', version:'1.4'
     testCompile "org.springframework.boot:spring-boot-starter-test"
 
 }
